--- a/addons/gamepush/plugin.cfg
+++ b/addons/gamepush/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="Game Push"
-description=""
+description="The game push SDK integration plugin for Godot 4."
 author="Anatoly Kulagin"
-version="0.0.1"
+version="1.0.0"
 script="game_push_plugin.gd"
